[package]
name = "rust-syntax-revision"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
linfa = "0.7.1"
linfa-clustering = "0.7.1"
linfa-datasets = "0.7.1"
linfa-linear = "0.7.1"
ndarray = "0.15"
plotters = "0.3.7"
polars = { version = "0.49.1", features = ["lazy", "ndarray"] }
rand = "0.9.1"
rand_distr = "0.5.1"
rayon = "1.10.0"
reqwest = "0.12.22"
tokio = { version = "1.47.0", features = ["full"] }
